--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -66,7 +66,7 @@ body {
     justify-content: space-between;
     width: 100%;
     background-color: #ffffff;
-    z-index: 5000;
+    z-index: 1000;
     margin: 25px 25px 0px 25px;
     border-radius: 5px;
     padding: 10px 0px 10px 0px;
@@ -86,6 +86,9 @@ body {
     display: flex;
     flex-direction: row;    
     margin: 0px 4% 0px 0px;
+}
+.table-container {
+    z-index: 1000;
 }
 @media screen and (max-width: 1200px) {
     #root {        
