--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -101,3 +101,34 @@ body {
         width: 350px !important;
     }
 }
+.columns {
+    margin-top: 20px;
+    border-radius: 5px;
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.left-column {
+    padding: 20px;
+    border-radius: 5px;
+    width: 60%;
+    background-color: rgba(255,255,255, .9);
+}
+.right-column {
+    padding: 20px;
+    border-radius: 5px;
+    width: 38%;
+    background-color: rgba(255,255,255, .9);
+    display: flex;
+    justify-content: center;
+    color:white
+}
+#inputChk {
+    display: flex;
+    flex-direction: column;
+}
+.form-row {
+    z-index: 1000;
+}
